0.2.0 release - see CHANGELOG.md